pinboards.it/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-pinboards
  labels:
    app: php-pinboards
spec:
  selector:
    matchLabels:
      app: php-pinboards
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: php-pinboards
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: php-pinboards
          image: ghcr.io/robalb/studentsplanner:sha-xx
          ports:
            - containerPort: 80
          # livenessProbe:
          #   exec:
          #     command:
          #       - curl
          #       - '-X POST'
          #       - http://localhost/api/v1/page_init?k8s-liveness-probe
          #   timeoutSeconds: 2
          #   initialDelaySeconds: 5
          #   periodSeconds: 60
