pinboards.it/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  php-pinboards
spec:
  selector:
    app:  php-pinboards

  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP #optional protocol
