pinboards.it/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-pinboards
  annotations:
    # (Optional): Annotations for the Ingress Controller
    # Middleware:
    # WARNING: the name of the middleware is namespace-name@kubernetescrd
    #          so we are forced to hardcode the namespace. The traefik crd makes this easier
    traefik.ingress.kubernetes.io/router.middlewares: pinboards-redirectscheme@kubernetescrd, pinboards-ratelimit@kubernetescrd
spec:
  rules:
  - host: "pinboards.halb.it"
    http:
      paths:
      # Path-based routing settings:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: php-pinboards
            port:
              number: 80
  tls:
  - hosts:
    - "pinboards.halb.it"
    secretName: pinboards-cert  #name of the tls secret. Make sure this is defined first
---
# Redirect to https
# https://stackoverflow.com/questions/68575472/k3s-redirect-http-to-https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
# Basic ratelimit
# Note: The traefik documentation is not very clear on how this works,
#       see https://github.com/traefik/traefik/issues/4549
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
spec:
  rateLimit:
    # -A bucket of 20 allowed requests is issued to every user - based on ip
    # -Every http request removes one element from the bucket
    # -The bucket receives one new allowed request every period/average = 60s/10 = 6s
    period: 1m
    average: 10
    burst: 20
